maybe fix archive caption wrapping

--- a/assets/stylesheets/archive.scss
+++ b/assets/stylesheets/archive.scss
@@ -46,7 +46,7 @@
             width: 100%;
 
             .archive-image {
-                width: 100%;
+                width: 100vw;
                 max-height: none;
             }
         }
